--- a/templates/index_page.mustache
+++ b/templates/index_page.mustache
@@ -15,6 +15,5 @@
     along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
 }}
 {{!
-    Index page
+    @template index_page
 }}
-<h2>{{helloworld}}</h2>
