--- a/templates/index_page.mustache
+++ b/templates/index_page.mustache
@@ -16,4 +16,29 @@
 }}
 {{!
     @template index_page
+
+    Index page
+
+        Example context (json):
+    {
+        "autofocusform": false,
+        "canloginasguest": true,
+        "canloginbyemail": true,
+        "cansignup": true,
+        "error": "testerror",
+        "errorformatted": "Test error formatted",
+        "forgotpasswordurl": "http://example.com/login/forgot_password.php",
+        "hasidentityproviders": false,
+        "hasinstructions": true,
+        "instructions": "For full access to this site, you first need to create an account.",
+        "loginurl": "http://example.com/stable_master/login/index.php",
+        "rememberusername": true,
+        "signupurl": "http://localhost/stable_master/login/signup.php",
+        "cookieshelpiconformatted": "",
+        "username": "",
+        "logintoken": "randomstring"
+    }
+
 }}
+
+<h2> To be used later</h2>
