made a few fixes to elimiate errors

--- a/templates/index_page.mustache
+++ b/templates/index_page.mustache
@@ -41,9 +41,10 @@
 
 }}
 <!-- Display table here -->
-<div id="toolhitteshahujatable">{{{table}}}</div>
-<!-- Add buttton goes here -->
-{{{button}}}<!-- Add button text -->
+<div id="toolhitteshahujatable">{{{table}}} <!-- Add buttton goes here -->
+    {{{button}}}
+</div>
+
 
 {{#js}}
     require(['tool_hitteshahuja/hitteshahuja'], function(ha) {
